crates/toml/tests/snapshots/invalid/ext/datetime/minute-too-large.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-09-09T12:69:09.09Z
  |       ^^^^^^^^^^^^^^^^^^^^^^^
invalid time, expected minute between 00 and 59
